# ABMS-Benchmark-FLAME

./: GenerationAgentsDistribution.R  Makefile.in  PreprocessAgentsDistribution  README  configure.ac  gen_file_init.cpp  get_results  persons_interact.c  persons_interact.xml  validation_check
init_files_samples/: 0_2.xml  0_3.xml  0_4.xml  0_5.xml  0_6.xml  0_7.xml
makefile_samples/: Makefile  Makefile_noTAU
slurm_script_samples/: ModelFLAME_slurm.sh  ModelFLAME_slurm_de1000a10000pas2000.sh  ModelFLAME_slurm_de16Ba256Bpasx4.sh  ModelFLAME_slurm_de4c128cpasx2.sh  ModelFLAME_slurm_de4c128cpasx2_128.sh  ModelFLAME_slurm_de4c128cpasx2_16.sh  ModelFLAME_slurm_de4c128cpasx2_32.sh  ModelFLAME_slurm_de4c128cpasx2_4.sh  ModelFLAME_slurm_de4c128cpasx2_64.sh  ModelFLAME_slurm_de4c128cpasx2_8.sh  ModelFLAME_slurm_notau.sh
